[project]
name = "mezie-brandos-api"
version = "0.1.0"
description = "FastAPI modular monolith for Mezie BrandOS"
requires-python = ">=3.11,<3.13"
dependencies = [
  "alembic>=1.18,<1.19",
  "fastapi>=0.139,<0.140",
  "httpx>=0.28,<0.29",
  "itsdangerous>=2.2,<3",
  "psycopg[binary]>=3.3,<4",
  "pydantic-settings>=2.13,<3",
  "python-multipart>=0.0.22,<0.1",
  "sqlalchemy>=2.0,<2.1",
  "structlog>=25.5,<26",
  "uvicorn[standard]>=0.42,<0.43",
]

[dependency-groups]
dev = [
  "pytest>=9.0,<10",
  "pytest-cov>=7.0,<8",
  "ruff>=0.15,<0.16",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RUF"]
ignore = ["B008", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105"]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 75
show_missing = true
